# aesnote

./: README.MD  deploy.sh  docker-compose.dev.yaml
.github/workflows/: black-check.yml  ci_pipeline.yml  ci_workflow.yaml  deploy.yml
backend/: Dockerfile  pyproject.toml  start.sh
backend/backend/: database.py  main.py
