[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["deadshumz <shumzz@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
